kafdrop/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: kafdrop
  name: kafdrop
spec:
  ports:
  - name: http
    port: 9000
    targetPort: 9000
  selector:
    app.kubernetes.io/name: kafdrop
  type: ClusterIP
