kafdrop/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/name: kafdrop
  name: kafdrop
spec:
  host: ""
  path: /
  port:
    targetPort: 9000
  to:
    kind: Service
    name: kafdrop
